--- a/serverSide/package.json
+++ b/serverSide/package.json
@@ -29,6 +29,8 @@
     "libreoffice-convert": "^1.1.1",
     "multer": "^1.4.2",
     "nativescript-plugin-firebase": "^10.5.2",
+    "node-localstorage": "^2.1.6",
+    "open": "^7.1.0",
     "passport": "^0.4.1",
     "passport-ldapauth": "^2.1.4",
     "phantomjs-prebuilt": "^2.1.16",
@@ -41,6 +43,7 @@
     "webdriverio": "^6.1.12",
     "webpage": "^0.3.0",
     "wkhtmltopdf": "^0.3.4",
+    "wkhtmltopdf-callback": "^0.1.5",
     "wkhtmltox": "^1.1.4",
     "x11": "^2.3.0"
   },
